# gtk-toy-diagrams

./: gtk-toy-diagrams.cabal
examples/: Test.hs
src/: ForceLayout.hs  Handles.hs  TestHandle.hs  TestPhysics.hs  TestText.hs  Text.hs  Transformed.hs  Wrap.hs
src/Graphics/UI/Gtk/Toy/: Demo.hs  Diagrams.hs  Draggable.hs  Generic.hs  Prelude.hs  Slider.hs  Text.hs  Transformed.hs  Utils.hs  Wrap.hs
src/Graphics/UI/Gtk/Toy/Text/: Interactive.hs
