Name:                gtk-toy-diagrams
Version:             0.1.0
Cabal-Version:       >= 1.8
Synopsis:            Utility functions for using diagrams with gtk-toy.
Category:            Graphics, GUI
Description: 
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan@gmail.com>
Stability:           experimental
Build-Type:          Simple

Library
  Extensions:        TupleSections
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-contrib,
                     fclabels,
                     gtk,
                     gtk-toy
  Hs-source-dirs:    src
  Exposed-Modules:
    Graphics.UI.Gtk.Toy.Diagrams
    Graphics.UI.Gtk.Toy.Draggable
--    Graphics.UI.Gtk.Toy.Generic
    Graphics.UI.Gtk.Toy.Prelude
    Graphics.UI.Gtk.Toy.Text
    Graphics.UI.Gtk.Toy.Text.Interactive
    Graphics.UI.Gtk.Toy.Wrap

executable text
  Main-Is:           src/Text.hs
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-contrib,
                     fclabels,
                     gtk-toy,
                     gtk-toy-diagrams

executable handles
  Main-Is:           src/Handles.hs
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-contrib,
                     fclabels,
                     gtk,
                     gtk-toy,
                     gtk-toy-diagrams

executable wrap
  Main-Is:           src/Wrap.hs
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-contrib,
                     fclabels,
                     gtk-toy,
                     gtk-toy-diagrams

executable forceLayout
  Main-Is:           src/ForceLayout.hs
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-contrib,
                     fclabels,
                     force-layout,
                     gtk-toy,
                     gtk-toy-diagrams
