Name:                gtk-toy-diagrams
Version:             0.1.0
Cabal-Version:       >= 1.8
Synopsis:            Utility functions for using diagrams with gtk-toy.
Category:            Graphics, GUI
Description: 
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Stability:           experimental
Build-Type:          Simple

Library
  Extensions:        TupleSections
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-core,
                     diagrams-contrib,
                     fclabels,
                     gtk,
                     gtk-toy,
                     newtype,
                     newtype-th >= 0.3
  Hs-source-dirs:    src
  Exposed-Modules:
    Graphics.UI.Gtk.Toy.Diagrams
    Graphics.UI.Gtk.Toy.Draggable
--    Graphics.UI.Gtk.Toy.Generic
    Graphics.UI.Gtk.Toy.Prelude
    Graphics.UI.Gtk.Toy.Slider
    Graphics.UI.Gtk.Toy.Text
    Graphics.UI.Gtk.Toy.Text.Interactive
    Graphics.UI.Gtk.Toy.Transformed

executable text
  Main-Is:           src/Text.hs
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-contrib,
                     fclabels,
                     gtk-toy,
                     gtk-toy-diagrams,
                     newtype,
                     newtype-th

executable handles
  Main-Is:           src/Handles.hs
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-contrib,
                     fclabels,
                     gtk,
                     gtk-toy,
                     gtk-toy-diagrams,
                     newtype,
                     newtype-th

executable wrap
  Main-Is:           src/Wrap.hs
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-contrib,
                     fclabels,
                     gtk-toy,
                     gtk-toy-diagrams,
                     newtype,
                     newtype-th

executable forceLayout
  Main-Is:           src/ForceLayout.hs
  Build-Depends:     base,
                     containers,
                     colour,
                     diagrams-lib,
                     diagrams-cairo,
                     diagrams-contrib,
                     fclabels,
                     force-layout,
                     gtk-toy,
                     gtk-toy-diagrams,
                     newtype,
                     newtype-th
